k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: "${GCR_HOSTNAME}/${GOOGLE_PROJECT_ID}/prism-api:${GITHUB_SHA}"
        ports:
        - containerPort: 3000
        command: ["/bin/sh", "-c"]
        args: ["npx prisma migrate deploy && node dist/index.js"]
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: api
